--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,14 @@
 
 # production
 /build
+/backend/config-production.json
+/backend/config-production*.json
+/backend/package-lock.json
+/backend/server.js
+/backend/webpack.config.js
+/frontend/package-lock.json
+/frontend/src/http-common.js
+/frontend/webpack.config.js
 
 # dev files
 /backend/config-development.json
